tests/negative/list_switch_default_continue_oob.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for x in 0..<6 {
    switch x {
      case 0: { }
      case 2: { }
      default: { continue }
    }
    if (x == 4) { break }
    lst.push(x)
  }
  lst[2] = 1
  return 0
}
